--- a/page.html
+++ b/page.html
@@ -27,7 +27,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         justify-content: center;
         min-height: 100vh;
         margin: 0;
-        background-color: #FAF2DA; /* Soft peach for a warm, welcoming background */
+        background-color: #000; /* Soft peach for a warm, welcoming background */
         padding: 10px;
         text-align: center;
         box-sizing: border-box;
