--- a/page.html
+++ b/page.html
@@ -39,7 +39,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
     }
 
     h1 {
-        color: #FF6B6B; /* Soft red for headers, warm and inviting */
+        color: #48A9A6; /* Soft red for headers, warm and inviting */
         font-size: 3.5em;
     }
 
@@ -64,7 +64,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
         padding: 15px 30px;
         font-size: 1.8em;
         color: #FAF2DA; /* Soft peach text for visibility */
-        background-color: #FF6B6B; /* Soft red for buttons, strong and welcoming */
+        background-color: #48A9A6; /* Soft red for buttons, strong and welcoming */
         text-align: center;
         text-decoration: none;
         border-radius: 12px;
